Adicionando botões que executam os programas desafio2.js e desafio3.js através do html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>IMC</title>
 </head>
 <body>
-    
-<script src="desafio3.js"></script>
+    <h1>Programas</h1>
+    <button type="button" onclick="calculaIMC()">Calculadora IMC</button>
+    <button type="button" onclick="converteTemperatura()">Conversor de Temperatura</button>
+
+    <script src="desafio2-function.js"></script>
+    <script src="desafio3-function.js"></script>
 </body>
 </html>
