--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <ul>
             <li><a href="classificacao-triangulo.html" target="_blank">Classificando o Triângulo</a></li>
             <li><a href="calculadora-imc.html" target="_blank">Classificando o IMC</a></li>
+            <li><a href="desconto.html" target="_blank">Desconto para funcionário</a></li>
 
         </ul>
     </nav>
