iniciando desafio array

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="classificacao-triangulo.html" target="_blank">Classificando o Triângulo</a></li>
             <li><a href="calculadora-imc.html" target="_blank">Classificando o IMC</a></li>
             <li><a href="desconto.html" target="_blank">Desconto para funcionário</a></li>
+            <li><a href="placar-de-jogo.html" target="_blank">Placar de jogo</a></li>
 
         </ul>
     </nav>
