--- a/busca-de-um-nome.html
+++ b/busca-de-um-nome.html
@@ -9,7 +9,7 @@
     <h1>Verifique se o nome que deseja está na lista:</h1>
 
     <form action="">
-        <label for="nomes">Digite 10 nomes que deseja armazenar:</label>
+        <label for="nome">Digite 10 nomes que deseja armazenar:</label>
         <input type="text" id="nomes">
 
         <button type="button" id="btSalvar">Salvar</button>
@@ -17,34 +17,9 @@
     </form>
     <div id="mostraResultado"></div>
 
-    <!-- <script>
-        document.querySelector('#btSalvar').addEventListener('click', ()=>{
-            const nome = document.querySelector('#nomes').value;
-            const contagem = 0;
-            let nomes = []
-            while (contagem <= 10){
-                let nomes = nomes.push(nome)
-                contagem + 1;
-            }
-            return console.log(nomes)
-
-            const resultado = armazenaNomes (contagem, nome);
-
-            document.querySelector('#mostraResultado').innerHTML = resultado;
-        })
-
-        function armazenaNomes (contagem, nome){
-            let nomes = [];
-            const contagem = 0;
-
-            while (contagem <= 10){
-                nomes.push(nome);
-                contagem + 1;
-            }
-            return nomes
-        }
-
-    </script> -->
+    <script>
+        
+    </script>
 
 </body>
 </html>
