Finalizando algumas tarefas

--- a/html/converte-temperatura.html
+++ b/html/converte-temperatura.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/icons8-temperatura-96.png" type="image/x-icon">
     <title>Conversor de Temperatura</title>
 </head>
 <body>
     <!-- Conversor de Temperatura -->
-    <a href="index.html">↩ Home </a>
+    <a href="../index.html">↩ Home </a>
     <h1 class="titulo-pagina">Conversor de temperatura</h1>
 
     <main>
@@ -49,7 +50,7 @@
     </main>
 
     
-    <script src="desafio3-function.js"></script>
+    <script src="../js/desafio3-function.js"></script>
     
     <script>
         // Desafio3
