--- a/testes/index-conversor.html
+++ b/testes/index-conversor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="icons8-temperatura-96.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/icons8-temperatura-96.png" type="image/x-icon">
     <title>Conversor de Temperatura</title>
 </head>
 <body>
@@ -26,6 +26,6 @@
         </form> 
         <button onclick="">Converter</button>
     </main>
-<script src="desafio4.js"></script>
+<script src="../js/desafio4.js"></script>
 </body>
 </html>
