--- a/html/busca-de-um-nome-automatico.html
+++ b/html/busca-de-um-nome-automatico.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/list.png" type="image/x-icon">
     <title>Busca de um nome</title>
 
     <style>
@@ -26,6 +27,7 @@
     </style>
 </head>
 <body>
+    <a href="../index.html">↩Home</a>
     <h1 class="titulo-pagina">Busca de um nome</h1>
 
     <main>
