--- a/html/calculadora-imc.html
+++ b/html/calculadora-imc.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/icons8-balança-16.png" type="image/x-icon">
     <title>Calculadora IMC</title>
-
-    <style>
-        
-    </style>
+    
 </head>
 <body>
-    <a href="index.html">↩ Home </a>
+    <a href="../index.html">↩ Home </a>
     <h1 class="titulo-pagina">Calculadora IMC</h1>
     <main>
         <form action="" id="formIMC">
@@ -42,7 +40,7 @@
      <!-- Fim da Calculadora IMC -->
 
      <!-- função externa -->
-     <script src="desafio2.js"></script>
+     <script src="../js/desafio2.js"></script>
 
      <script>
         // add funcionalidades nos botões
