--- a/html/classificacao-triangulo.html
+++ b/html/classificacao-triangulo.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/icons8-triângulo-16.png" type="image/x-icon">
     <title>Classificação de um Triangulo</title>
 </head>
 <body>
-    <a href="index.html">↩ Home </a>
+    <a href="../index.html">↩ Home </a>
     <h1 class="titulo-pagina">Classificação do triângulo</h1>
     
     <main>
