--- a/html/placar-de-jogo.html
+++ b/html/placar-de-jogo.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/icons8-punho-16.png" type="image/x-icon">
     <title>Placar de Jogo</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html">↩ Home </a>
+    <a href="../index.html">↩ Home </a>
     <div class="titulo-pagina">
         <h1>Classificando o placar</h1>
     </div>
