--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 
     <nav>
         <ul>
-            <li><a href="/html/classificacao-triangulo.html">Classificando o Triângulo</a></li>
+            <li><a href="/html/calculadora-de-media.html">Calculadora de média</a></li>
+            <li><a href="/html/converte-temperatura.html">Conversor de Temperatura</a></li>
             <li><a href="/html/calculadora-imc.html">Classificando o IMC</a></li>
+            <li><a href="/html/classificacao-triangulo.html">Classificando o Triângulo</a></li>
             <li><a href="/html/desconto.html">Desconto para funcionário</a></li>
             <li><a href="/html/placar-de-jogo.html">Placar de jogo</a></li>
-            <li><a href="/html/converte-temperatura.html">Conversor de Temperatura</a></li>
             <li><a href="/html/busca-de-um-nome-automatico.html">Buscador de nomes</a></li>
-            <li><a href="/html/calculadora-de-media.html">Calculadora de média</a></li>
+            <li><a href="/html/posto-de-gasolina.html">Posto de Gasolina</a></li>
+            
 
         </ul>
     </nav>
