feat: Linkando a resolução do exercicio 6 'produtos-com-desconto'

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="/html/placar-de-jogo.html">Placar de jogo</a></li>
             <li><a href="/html/busca-de-um-nome-automatico.html">Buscador de nomes</a></li>
             <li><a href="/html/posto-de-gasolina.html">Posto de Gasolina</a></li>
+            <li><a href="/html/produtos-com-desconto.html">Produtos com desconto</a></li>
             
 
         </ul>
