refactor: Alterando link style de relativo para absoluto

--- a/html/posto-de-gasolina.html
+++ b/html/posto-de-gasolina.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posto de Gasolina</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <a href="../index.html">↩Home</a>
@@ -64,6 +64,10 @@
             }
             return msg;
         }
+
+        document.querySelector('#btReset').addEventListener('click', () =>{
+            document.querySelector('#mostrarResultado').innerHTML = "";
+        })
     </script>
 </body>
 </html>
