feat: Adicionando navBar nos arquivos html

--- a/html/calculadora-de-media.html
+++ b/html/calculadora-de-media.html
@@ -9,7 +9,7 @@
     <title>Calculadora de média</title>
 </head>
 <body>
-    <a href="../index.html">↩Home</a>
+    <!-- <a href="../index.html">↩Home</a> -->
     <div class="titulo-pagina">
         <h1>Calcule sua média de notas</h1>
     </div>
@@ -43,6 +43,7 @@
 
     </main>
 
+    <script src="/js/navbar.js"></script>
     <script src="../js/desafio1.js"></script>
 
     <script>
