--- a/html/converte-temperatura.html
+++ b/html/converte-temperatura.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Conversor de Temperatura -->
-    <a href="../index.html">↩ Home </a>
+    <!-- <a href="../index.html">↩ Home </a> -->
     <h1 class="titulo-pagina">Conversor de temperatura</h1>
 
     <main>
@@ -49,7 +49,7 @@
         <div id="mostrarResultado"></div>
     </main>
 
-    
+    <script src="/js/navbar.js"></script>
     <script src="../js/desafio3-function.js"></script>
     
     <script>
