--- a/html/desconto.html
+++ b/html/desconto.html
@@ -9,7 +9,7 @@
     <title>Desconto</title>
 </head>
 <body>
-    <a href="../index.html">↩ Home </a>
+    <!-- <a href="../index.html">↩ Home </a> -->
     <div class="titulo-pagina">
         <h1>Aplique seu desconto</h1>
     </div>
