--- a/html/placar-de-jogo.html
+++ b/html/placar-de-jogo.html
@@ -9,7 +9,7 @@
     <title>Placar de Jogo</title>
 </head>
 <body>
-    <a href="../index.html">↩ Home </a>
+    <!-- <a href="../index.html">↩ Home </a> -->
     <div class="titulo-pagina">
         <h1>Classificando o placar</h1>
     </div>
@@ -36,6 +36,8 @@
         </form>
         <div id="mostrarResultado"></div>
     </main>
+
+    <script src="/js/navbar.js"></script>
 
     <script>
         document.querySelector('#btPlacar').addEventListener('click', () => {
