--- a/html/calculadora-imc.html
+++ b/html/calculadora-imc.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <a href="../index.html">↩ Home </a>
+    <!-- <a href="../index.html">↩ Home </a> -->
     <h1 class="titulo-pagina">Calculadora IMC</h1>
     <main>
         <form action="" id="formIMC">
@@ -40,6 +40,7 @@
      <!-- Fim da Calculadora IMC -->
 
      <!-- função externa -->
+     <script src="/js/navbar.js"></script>
      <script src="../js/desafio2.js"></script>
 
      <script>
