--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             <nav class="menu-navegacao">
                 <ul>
                     <!-- <img src="./img/icons8-ford-144.png" alt=""> -->
-                    <li><a href="/index.html">Home</a></li>
+                    <!-- <li><a href="/index.html">Home</a></li> -->
                     <li><a href="/html/calculadora-de-media.html">Desafio 1</a></li>
                     <li><a href="/html/calculadora-imc.html">Desafio 2</a></li>
                     <li><a href="/html/converte-temperatura.html">Desafio 3</a></li>
                     <li><a href="/html/classificacao-triangulo.html">Exerc. 1</a></li>
                     <li><a href="/html/desconto.html">Exerc. 2</a></li>
                     <li><a href="/html/placar-de-jogo.html">Exerc. 3</a></li>
-                    <li><a href="/html/busca-de-um-nome-automatico.html">Exerc. 4</a></li>
+                    <!-- <li><a href="/html/busca-de-um-nome-automatico.html">Exerc. 4</a></li>
                     <li><a href="/html/posto-de-gasolina.html">Exerc. 5</a></li>
                     <li><a href="/html/produtos-com-desconto.html">Exerc. 6</a></li>
-                    <li><a href="/html/taxa-de-natalidade.html">Exerc. 7</a></li>
+                    <li><a href="/html/taxa-de-natalidade.html">Exerc. 7</a></li> -->
 
                 </ul>
             </nav>
