feat: Adicionando navbar em todos os arquivos

--- a/html/busca-de-um-nome-automatico.html
+++ b/html/busca-de-um-nome-automatico.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html">↩Home</a>
+    <!-- <a href="../index.html">↩Home</a> -->
     <h1 class="titulo-pagina">Busca de um nome</h1>
 
     <main>
@@ -47,7 +47,7 @@
     <div id="mostrarResultado"></div> 
     </main>
 
-
+    <script src="/js/navbar.js"></script>
     <script>
         
         // adicionando funcionalidades à tecla 'Enter'
