--- a/html/produtos-com-desconto.html
+++ b/html/produtos-com-desconto.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <a href="../index.html">↩Home</a>
+    <!-- <a href="../index.html">↩Home</a> -->
     <h1 class="titulo-pagina">Produtos com desconto</h1>
     
     <main>
@@ -35,6 +35,7 @@
         </div>
     </main>
 
+    <script src="/js/navbar.js"></script>
     <script src="/js/desafio6.js"></script>
     
     <script>
