refact: Excluindo elementos criados, e introduzindo-os novamente através do js

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/responsividade.css">
+    <script src="/js/estilos.js"></script>
 </head>
 <body>
 
-    <header>
+    <!-- <header>
         <div class="logo-menu">
 
             <div class="logo">
@@ -19,18 +21,18 @@
             
             <nav class="menu-navegacao">
                 <ul>
-                    <!-- <img src="./img/icons8-ford-144.png" alt=""> -->
-                    <!-- <li><a href="/index.html">Home</a></li> -->
+                    <img src="./img/icons8-ford-144.png" alt="">
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="/html/calculadora-de-media.html">Desafio 1</a></li>
                     <li><a href="/html/calculadora-imc.html">Desafio 2</a></li>
                     <li><a href="/html/converte-temperatura.html">Desafio 3</a></li>
                     <li><a href="/html/classificacao-triangulo.html">Exerc. 1</a></li>
                     <li><a href="/html/desconto.html">Exerc. 2</a></li>
                     <li><a href="/html/placar-de-jogo.html">Exerc. 3</a></li>
-                    <!-- <li><a href="/html/busca-de-um-nome-automatico.html">Exerc. 4</a></li>
+                    <li><a href="/html/busca-de-um-nome-automatico.html">Exerc. 4</a></li>
                     <li><a href="/html/posto-de-gasolina.html">Exerc. 5</a></li>
                     <li><a href="/html/produtos-com-desconto.html">Exerc. 6</a></li>
-                    <li><a href="/html/taxa-de-natalidade.html">Exerc. 7</a></li> -->
+                    <li><a href="/html/taxa-de-natalidade.html">Exerc. 7</a></li>
 
                 </ul>
             </nav>
@@ -44,7 +46,7 @@
                 <li><a href="#">Interfaces Web</a></li>
             </ul>
         </div>
-    </header>
+    </header> -->
     <!-- <header>
         <nav>
             <ul>
@@ -65,8 +67,7 @@
 
     <h2>Exercícios</h2>
 
-    <nav>
-    </nav>
+    <script src="/js/navbar.js"></script>
 
 </body>
 </html>
