test: Testando implementação de menu-sandwich.

--- a/html/classificacao-triangulo.html
+++ b/html/classificacao-triangulo.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="shortcut icon" href="../img/icons8-triângulo-16.png" type="image/x-icon">
+    <script src="/js/estilos.js"></script>
     <title>Classificação de um Triangulo</title>
 </head>
 <body>
@@ -50,7 +51,8 @@
     </main>
 
     <!-- Importanto barra de navegação NAVBAR-->
-    <script src="/js/navbar.js"></script>
+    <!-- <script src="/js/navbar.js"></script> -->
+    <script src="/js/sandwich.js"></script>
     
     
     <!-- Funções dos botões-->
