--- a/html/desconto.html
+++ b/html/desconto.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css"> -->
+    <script src="/js/estilos.js"></script>
     <link rel="shortcut icon" href="../img/icons8-moedas-16.png" type="image/x-icon">
     <title>Desconto</title>
 </head>
