--- a/html/produtos-com-desconto.html
+++ b/html/produtos-com-desconto.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos com desconto</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <!-- <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css"> -->
+    <script src="/js/estilos.js"></script>
 
 </head>
 <body>
