--- a/index.html
+++ b/index.html
@@ -8,11 +8,38 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/responsividade.css"> -->
-    
+
     <script src="/js/estilos.js"></script>
+
+    <style>
+        .menu-sandwich-oculto{
+            display: none;
+        }
+    </style>
 </head>
 <body>
+    <button type="button" id="btMenu">Menu</button>
+    <button type="button" id="btFechar" class="menu-sandwich-oculto">Fechar</button>
+    <div id="menu-sandwich" class="menu-sandwich-oculto">
+        <a href="/html/busca-de-um-nome-automatico.html">Exercicio 4</a>
+        <a href="/html/classificacao-triangulo.html">Exercicio 1</a>
+    </div>
 
+    <script>
+        document.querySelector('#btMenu').addEventListener('click', () =>{
+            document.querySelector('#menu-sandwich').classList.remove('menu-sandwich-oculto')
+            document.querySelector('#btMenu').classList.add('menu-sandwich-oculto')
+            document.querySelector('#btFechar').classList.remove('menu-sandwich-oculto')
+
+        })
+        document.querySelector('#btFechar').addEventListener('click',() =>{
+            document.querySelector('#menu-sandwich').classList.add('menu-sandwich-oculto')
+            document.querySelector('#btFechar').classList.add('menu-sandwich-oculto')
+            document.querySelector('#btMenu').classList.remove('menu-sandwich-oculto')
+        })
+
+
+    </script>
     <!-- <header>
         <div class="logo-menu">
 
@@ -68,7 +95,8 @@
 
     <h2>Exercícios</h2>
 
-    <script src="/js/navbar.js"></script>
+    <!-- <script src="/js/navbar.js"></script> -->
+    <script src="/js/sandwich.js"></script>
 
 </body>
 </html>
