refactor: Modificações do menu sandwich

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 
     <script src="/js/estilos.js"></script>
 
-    <style>
+    <!-- <style>
         .menu-sandwich-oculto{
             display: none;
         }
-    </style>
+    </style> -->
 </head>
 <body>
-    <button type="button" id="btMenu">Menu</button>
-    <button type="button" id="btFechar" class="menu-sandwich-oculto">Fechar</button>
-    <div id="menu-sandwich" class="menu-sandwich-oculto">
+    <!-- <button type="button" id="btMenu">Menu</button> -->
+    <!-- <button type="button" id="btFechar" class="menu-sandwich-oculto">Fechar</button> -->
+    <!-- <div id="menu-sandwich" class="menu-sandwich-oculto">
         <a href="/html/busca-de-um-nome-automatico.html">Exercicio 4</a>
         <a href="/html/classificacao-triangulo.html">Exercicio 1</a>
-    </div>
+    </div> -->
 
-    <script>
+    <!-- <script>
         document.querySelector('#btMenu').addEventListener('click', () =>{
             document.querySelector('#menu-sandwich').classList.remove('menu-sandwich-oculto')
             document.querySelector('#btMenu').classList.add('menu-sandwich-oculto')
@@ -39,7 +39,16 @@
         })
 
 
-    </script>
+    </script> -->
+<!-- 
+    <header>
+        <div class="logo-menu">
+            <button>Test</button>
+            <div class="logo">
+                <span>Desafios & Exercicios</span>
+            </div>
+        </div>
+    </header> -->
     <!-- <header>
         <div class="logo-menu">
 
@@ -91,9 +100,10 @@
         </nav>
     </header> -->
 
+<!-- 
     <h1>Desafios e Exercícios</h1>
 
-    <h2>Exercícios</h2>
+    <h2>Exercícios</h2> -->
 
     <!-- <script src="/js/navbar.js"></script> -->
     <script src="/js/sandwich.js"></script>
