feat: adicionando menu sandwich

--- a/html/desafio1.html
+++ b/html/desafio1.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css"> -->
     <script src="/js/estilos.js"></script>
     <link rel="shortcut icon" href="../img/icons8-matemática-16.png" type="image/x-icon">
     <title>Calculadora de média</title>
 </head>
 <body>
-    <!-- <a href="../index.html">↩Home</a> -->
+    <script src="/js/sandwich.js"></script>
+    
     <div class="titulo-pagina">
         <h1>Calcule sua média de notas</h1>
     </div>
@@ -44,7 +43,8 @@
 
     </main>
 
-    <script src="/js/navbar.js"></script>
+    <!-- <script src="/js/navbar.js"></script> -->
+   
     <script src="../js/desafio1.js"></script>
 
     <script>
