--- a/html/desafio2.html
+++ b/html/desafio2.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css"> -->
     <script src="/js/estilos.js"></script>
     <link rel="shortcut icon" href="../img/icons8-balança-16.png" type="image/x-icon">
     <title>Calculadora IMC</title>
     
 </head>
 <body>
-    <!-- <a href="../index.html">↩ Home </a> -->
+    <script src="/js/sandwich.js"></script>
+
     <h1 class="titulo-pagina">Calculadora IMC</h1>
     <main>
         <form action="" id="formIMC">
