--- a/html/desafio3.html
+++ b/html/desafio3.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css"> -->
     <script src="/js/estilos.js"></script>
     <link rel="shortcut icon" href="../img/icons8-temperatura-96.png" type="image/x-icon">
     <title>Conversor de Temperatura</title>
 </head>
 <body>
-    <!-- Conversor de Temperatura -->
-    <!-- <a href="../index.html">↩ Home </a> -->
+    <script src="/js/sandwich.js"></script>
+
     <h1 class="titulo-pagina">Conversor de temperatura</h1>
 
     <main>
