--- a/html/exercicio4.html
+++ b/html/exercicio4.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css"> -->
     <script src="/js/estilos.js"></script>
     <link rel="shortcut icon" href="../img/list.png" type="image/x-icon">
     <title>Busca de um nome</title>
@@ -28,7 +26,8 @@
     </style>
 </head>
 <body>
-    <!-- <a href="../index.html">↩Home</a> -->
+    <script src="/js/sandwich.js"></script>
+
     <h1 class="titulo-pagina">Busca de um nome</h1>
 
     <main>
