--- a/html/exercicio5.html
+++ b/html/exercicio5.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posto de Gasolina</title>
-    <!-- <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css"> -->
     <script src="/js/estilos.js"></script>
 </head>
 <body>
-    <!-- <a href="../index.html">↩Home</a> -->
+    <script src="/js/sandwich.js"></script>
+
     <h1 class="titulo-pagina">Obtenha seu desconto</h1>
 
     <main>
