--- a/html/exercicio6.html
+++ b/html/exercicio6.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos com desconto</title>
-    <!-- <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css"> -->
     <script src="/js/estilos.js"></script>
 
 </head>
 <body>
-    <!-- <a href="../index.html">↩Home</a> -->
+    <script src="/js/sandwich.js"></script>
+
     <h1 class="titulo-pagina">Produtos com desconto</h1>
     
     <main>
