--- a/html/exercicio7.html
+++ b/html/exercicio7.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="/js/sandwich.js"></script>
     
-
-    <script src="/js/navbar.js"></script>
 </body>
 </html>
