--- a/html/exercicio2.html
+++ b/html/exercicio2.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css"> -->
     <script src="/js/estilos.js"></script>
     <link rel="shortcut icon" href="../img/icons8-moedas-16.png" type="image/x-icon">
     <title>Desconto</title>
 </head>
 <body>
-    <!-- <a href="../index.html">↩ Home </a> -->
+    <script src="/js/sandwich.js"></script>
+
     <div class="titulo-pagina">
         <h1>Aplique seu desconto</h1>
     </div>
