feat: iniciando cypress

--- a/public/html/desafio1.html
+++ b/public/html/desafio1.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/estilos.js"></script>
+    <script src="/public/js/estilos.js"></script>
     <link rel="shortcut icon" href="../img/icons8-matemática-16.png" type="image/x-icon">
     <title>Calculadora de média</title>
 </head>
 <body>
-    <script src="/js/sandwich.js"></script>
+    <script src="/public/js/sandwich.js"></script>
     
     <div class="titulo-pagina">
         <h1>Calcule sua média de notas</h1>
