--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/responsividade.css"> -->
     
-    <script src="/js/estilos.js"></script>
+    <script src="/public/js/estilos.js"></script>
     
     <!-- <style>
         .menu-sandwich-oculto{
@@ -18,7 +18,7 @@
     </style> -->
 </head>
 <body>
-    <script src="/js/sandwich.js"></script>
+    <script src="/public/js/sandwich.js"></script>
     <!-- <button type="button" id="btMenu">Menu</button> -->
     <!-- <button type="button" id="btFechar" class="menu-sandwich-oculto">Fechar</button> -->
     <!-- <div id="menu-sandwich" class="menu-sandwich-oculto">
